propellor (4.7.6) UNRELEASED; urgency=medium

  * Sbuild: Add Sbuild.userConfig property.
    Thanks, Sean Whitton
  * Locale: Make sure that the locales package is installed when enabling
    locales.
  * Locale: Display an error message when /etc/locale.gen does not contain
    the requested locale.

 -- Joey Hess <id@joeyh.name>  Tue, 01 Aug 2017 15:33:49 -0400

propellor (4.7.5) unstable; urgency=medium

  * Avoid crashing when getTerminalName fails due to eg, being in a chroot.

 -- Joey Hess <id@joeyh.name>  Tue, 01 Aug 2017 15:28:58 -0400

propellor (4.7.4) unstable; urgency=medium

  * Set GPG_TTY when run at a terminal, so that gpg can do password
    prompting despite being connected by pipes to propellor (or git).
  * Rsync: Make rsync display less verbose.
  * Improve PROPELLOR_TRACE output so serialized trace values always
    come on their own line, not mixed with title setting.

 -- Joey Hess <id@joeyh.name>  Tue, 01 Aug 2017 13:30:54 -0400

propellor (4.7.3) unstable; urgency=medium

  * Expand the Trace data type.

 -- Joey Hess <id@joeyh.name>  Sat, 29 Jul 2017 17:26:32 -0400

propellor (4.7.2) unstable; urgency=medium

  * Added PROPELLOR_TRACE environment variable, which can be set to 1 to
    make propellor output serialized Propellor.Message.Trace values,
    for consumption by another program.
  * Rsync: Make rsync display its progress, in a minimal format to avoid
    scrolling each file down the screen.

 -- Joey Hess <id@joeyh.name>  Sat, 29 Jul 2017 15:49:00 -0400

propellor (4.7.1) unstable; urgency=medium

  * Added Mount.isMounted.
  * Grub.bootsMounted: Bugfix.

 -- Joey Hess <id@joeyh.name>  Fri, 28 Jul 2017 22:22:40 -0400

propellor (4.7.0) unstable; urgency=medium

  * Add Apt.proxy property to set a host's apt proxy.
    Thanks, Sean Whitton.
  * Add Apt.useLocalCacher property to set up apt-cacher-ng.
    Thanks, Sean Whitton.
  * Rework Sbuild properties to use apt proxies/cachers instead of